--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -1,6 +1,10 @@
 .section-about {
     padding: 34rem 2rem;
     margin-block-start: -24vh;
+
+    @media (max-width:844px) {
+        padding-block-end: 45rem;
+    }
 }
 .section-features {
     padding: 20rem 4rem;
